<resources>
    <string name="app_name">trabajo_final</string>
    <string name="Perfil">perfil</string>
    <string name="Gastos">Gastos</string>
    <string name="Ahorros">Ahorros</string>
    <string name="Graficos">graficos</string>
    <string name="GASTOS">gastos</string>
    <string name="ingresos">ingresos</string>
    <string name="Transporte">transporte</string>
    <string name="Comida">comida</string>
    <string name="Trabajos">trabajos</string>
    <string name="ocio">ocio</string>
    <string name="salidas">salidas</string>
    <string name="snacks">snacks</string>
    <string name="deuda">deudas y prestamos</string>
    <string name="prestamos">prestamos</string>
    <string name="totalGastos">TOTAL  :</string>
    <string name="calculadora">calculadora  :</string>
    <string name="graficos">graficos  :</string>
    <string name="perfil">perfil  :</string>
    <string name="ahorros">ahorros  :</string>
    <string name="save">Guardar  :</string>
    <string name="recibir">ingrese su imformacion del producto  :</string>
    <string name="recibirprecio">ingrese el precio del producto  :</string>
    <string name="recibircantidad">ingresa cantidad  :</string>
    <string name="eliminar">eliminar :</string>




</resources>