<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rosadofondo"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textCalculadora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculadora"
        android:layout_marginTop="50dp"
        android:textAllCaps="true"
        android:textSize="30dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:id="@+id/recibirnombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/recibir"
        android:padding="16dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/textCalculadora"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/recibircantidad"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
    <EditText
        android:id="@+id/recibircantidad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/recibircantidad"
        android:padding="16dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/recibirnombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/recibirprecio"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <EditText
        android:id="@+id/recibirprecio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/recibirprecio"
        android:padding="16dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/recibircantidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/rosadobotones"
        android:text="@string/save"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnAhorros"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toEndOf="@+id/btneliminar"
        app:layout_constraintTop_toBottomOf="@+id/recibirprecio" />

    <Button
        android:id="@+id/btnGastos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/rosadobotones"
        android:text="@string/Gastos"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnGrafico"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="50dp" />



    <Button
        android:id="@+id/btnGrafico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/rosadobotones"
        android:text="@string/Graficos"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnPerfil"
        app:layout_constraintStart_toEndOf="@+id/btnGastos"
        android:layout_marginBottom="50dp" />

    <Button
        android:id="@+id/btnPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/rosadobotones"
        android:text="@string/Perfil"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnGrafico"
        android:layout_marginBottom="50dp" />

    <Button
        android:id="@+id/btneliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eliminar"
        android:backgroundTint="@color/rosadobotones"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/btnSave"
        app:layout_constraintBottom_toTopOf="@+id/btnAhorros"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recibirprecio" />

</androidx.constraintlayout.widget.ConstraintLayout>