<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rosadofondo"
    tools:context=".PerfilActivity">

    <TextView
        android:id="@+id/textAhorros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil"
        android:layout_marginTop="50dp"
        android:textAllCaps="true"
        android:textSize="30dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Nombre"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAhorros"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <EditText
        android:id="@+id/editTextEdad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Edad"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombre"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <CheckBox
        android:id="@+id/checkBoxUniversitario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Universitario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEdad"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"/>

    <CheckBox
        android:id="@+id/checkBoxTrabaja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Trabaja"
        app:layout_constraintStart_toEndOf="@+id/checkBoxUniversitario"
        app:layout_constraintTop_toTopOf="@+id/checkBoxUniversitario"
        android:layout_marginStart="16dp"/>

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Guardar"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxUniversitario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <!-- Botones de navegación -->
    <Button
        android:id="@+id/btnGastos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/rosadobotones"
        android:text="@string/Gastos"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnGrafico"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="50dp" />

    <Button
        android:id="@+id/btnGrafico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/rosadobotones"
        android:text="@string/Graficos"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnPerfil"
        app:layout_constraintStart_toEndOf="@+id/btnGastos"
        android:layout_marginBottom="50dp" />

    <Button
        android:id="@+id/btnPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/rosadobotones"
        android:text="@string/Perfil"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnGrafico"
        android:layout_marginBottom="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
